--- a/manifest.json
+++ b/manifest.json
@@ -6,19 +6,19 @@
       "src": "favicon.ico",
       "type": "image/x-icon",
       "sizes": "64x64 32x32 24x24 16x16",
-      "purpose": "any-maskable"
+      "purpose": "any maskable"
     },
     {
       "src": "meet-app-192.png",
       "type": "image/png",
       "sizes": "192x192",
-      "purpose": "any-maskable"
+      "purpose": "any maskable"
     },
     {
       "src": "meet-app-512.png",
       "type": "image/png",
       "sizes": "512x512",
-      "purpose": "any-maskable"
+      "purpose": "any maskable"
     }
   ],
   "start_url": ".",
